@@ -1,8 +1,7 @@
 package smartin.miapi.modules.abilities.gun;
 
-
 import com.mojang.serialization.Codec;
-import net.minecraft.core.BlockPos;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.core.component.DataComponentType;
 import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.codec.ByteBufCodecs;
@@ -13,15 +12,17 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.ClipContext;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.phys.AABB;
+import net.minecraft.world.phys.EntityHitResult;
 import net.minecraft.world.phys.HitResult;
 import net.minecraft.world.phys.Vec3;
 import smartin.miapi.Miapi;
 import smartin.miapi.network.modern.ModernNetworking;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import static smartin.miapi.modules.abilities.gun.GunMagazineComponent.ShotPacketData.PACKET_CODEC;
 
 public class GunMagazineComponent {
     public static final Codec<List<ItemStack>> CODEC = ItemStack.CODEC.listOf();
@@ -32,28 +33,35 @@ public class GunMagazineComponent {
             .build();
 
     public static final ResourceLocation PACKET_ID = Miapi.id("miapi", "c2s_hitscan_shot");
-    public static StreamCodec<RegistryFriendlyByteBuf, Vec3> PACKET_CODEC = ByteBufCodecs.fromCodecWithRegistriesTrusted(Vec3.CODEC);
 
-
-    static{
-        ModernNetworking.registerC2SReceiver(PACKET_ID, PACKET_CODEC, (hitPos, player, access) -> {
+    static {
+        ModernNetworking.registerC2SReceiver(PACKET_ID, PACKET_CODEC, (packetData, player, access) -> {
             Level world = player.level();
+            ItemStack weapon = player.getWeaponItem();
 
-            if (!world.isClientSide) {
-                // Verify the hit on the server
-                for (LivingEntity entity : world.getEntitiesOfClass(LivingEntity.class, new AABB(new BlockPos((int)hitPos.x,(int)hitPos.y,(int)hitPos.z)).inflate(1))) {
-                    if (entity != player) {
-                        //entity.hurt(DamageSource.playerAttack(player), 5.0F); // Example damage
-                    }
+            if (!world.isClientSide && (getBulletCount(weapon) > 0)) {
+                double maxRange = GunContextProperty.getGunContext(weapon).range().getValue();
+                Vec3 shooterPos = player.getEyePosition();
+
+                // Validate the shot distance
+                if (packetData.hitPosition.distanceTo(shooterPos) <= maxRange) {
+                    packetData.hitEntityId.ifPresent(entityID -> {
+                        if (player.level().getEntity(entityID) instanceof LivingEntity target && target != player) {
+                            double damage = GunContextProperty.getGunContext(weapon).baseDamage().getValue();
+                            var optionalBullet = removeBullet(weapon);
+                            optionalBullet.ifPresent(bullet -> {
+                                target.hurt(player.damageSources().playerAttack(player), (float) damage);
+                            });
+                        }
+                    });
                 }
             }
         });
-
     }
 
     public static void addBullet(ItemStack gun, ItemStack bullet) {
         List<ItemStack> magazine = List.copyOf(gun.getOrDefault(STACK_STORAGE_COMPONENT, List.of()));
-        magazine = magazine.stream().collect(Collectors.toList());
+        magazine = new ArrayList<>(magazine);
         magazine.add(bullet);
         gun.set(STACK_STORAGE_COMPONENT, magazine);
     }
@@ -61,8 +69,8 @@ public class GunMagazineComponent {
     public static Optional<ItemStack> removeBullet(ItemStack gun) {
         List<ItemStack> magazine = List.copyOf(gun.getOrDefault(STACK_STORAGE_COMPONENT, List.of()));
         if (!magazine.isEmpty()) {
-            magazine = magazine.stream().collect(Collectors.toList());
-            ItemStack removed = magazine.remove(magazine.size() - 1);
+            magazine = new ArrayList<>(magazine);
+            ItemStack removed = magazine.removeFirst();
             gun.set(STACK_STORAGE_COMPONENT, magazine);
             return Optional.of(removed);
         }
@@ -79,12 +87,10 @@ public class GunMagazineComponent {
 
     public static void shoot(Level world, Player player, boolean isHitscan) {
         if (isHitscan) {
-            // Client-side hitscan logic
             if (world.isClientSide) {
                 handleClientHitscan(player);
             }
         } else {
-            // Server-side projectile logic
             handleProjectileShot(world, player);
         }
     }
@@ -92,21 +98,43 @@ public class GunMagazineComponent {
     private static void handleClientHitscan(Player player) {
         Vec3 start = player.getEyePosition();
         Vec3 look = player.getLookAngle();
-        Vec3 end = start.add(look.scale(100)); // 100-block range for hitscan
+        double range = GunContextProperty.getGunContext(player.getMainHandItem()).range().getValue();
+
+        Vec3 end = start.add(look.scale(range));
         HitResult hitResult = player.level().clip(new ClipContext(start, end, ClipContext.Block.OUTLINE, ClipContext.Fluid.NONE, player));
 
-        if (hitResult.getType() == HitResult.Type.ENTITY) {
-            // Notify the server of the hit
-            ModernNetworking.sendToServer(PACKET_ID, PACKET_CODEC, hitResult.getLocation(), player.level().registryAccess());
+        Optional<Integer> entityHit = Optional.empty();
+
+        if (hitResult instanceof EntityHitResult entityHitResult) {
+            entityHit = Optional.of(entityHitResult.getEntity().getId());
         }
+
+        // Send hit data to server
+        ModernNetworking.sendToServer(PACKET_ID, PACKET_CODEC, new ShotPacketData(hitResult.getLocation(), entityHit), player.level().registryAccess());
     }
 
     private static void handleProjectileShot(Level world, Player player) {
-        //Arrow arrow = new Arrow(world, player);
-        //arrow.shootFromRotation(player, player.getXRot(), player.getYRot(), 0.0F, 3.0F, 1.0F); // Similar to a bow
-        //world.addFreshEntity(arrow);
+        // Example: Spawn a bullet entity with correct properties
+        // BulletEntity bullet = new BulletEntity(world, player);
+        // bullet.setVelocity(player.getLookAngle().scale(3.0)); // Adjust speed
+        // world.addFreshEntity(bullet);
     }
 
+    public static class ShotPacketData {
+        public final Vec3 hitPosition;
+        public final Optional<Integer> hitEntityId;
 
+        public ShotPacketData(Vec3 hitPosition, Optional<Integer> hitEntityId) {
+            this.hitPosition = hitPosition;
+            this.hitEntityId = hitEntityId;
+        }
 
+        public static final Codec<ShotPacketData> CODEC = RecordCodecBuilder.create(instance -> instance.group(
+                Vec3.CODEC.fieldOf("hitPosition").forGetter(data -> data.hitPosition),
+                Codec.INT.optionalFieldOf("hitEntityId").forGetter(data -> data.hitEntityId)
+        ).apply(instance, ShotPacketData::new));
+
+        public static final StreamCodec<RegistryFriendlyByteBuf, ShotPacketData> PACKET_CODEC =
+                ByteBufCodecs.fromCodecWithRegistries(CODEC);
+    }
 }
